--- a/static/index.html
+++ b/static/index.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Akshaye Dhawan</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Jacob Bigelow</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Akshaye is an Associate Professor of Computer Science at Ursinus College </p>
+	<p>Jacob is a double major in physics and computer science major with a math minor at Ursinus College </p>
 
 	<h4>Projects</h4>
 	<ol>
